--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="Brasao_CampoMourao_Parana_Brasil.svg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
